tests/node_haste/node_haste.exp
Error ------------------------------------------------------------------------------------------- foo/bar/client.js:7:27

Cannot resolve module `annotation`. [cannot-resolve-module]

   7| var unreachable = require('annotation');
                                ^^^^^^^^^^^^



Found 1 error
